# HALloween_projet

./: AtmegaSPI.rs  Cargo.toml  README.md  Rapport Projet HAL RENAUD RICHARD.txt
src/: AtmegaUSART.rs  Atmega_I2C.rs  Atmega_SPI.rs  CortexUSART.rs  Cortex_I2C.rs  Cortex_SPI.rs  Gpio.rs  main.rs
