[package]
name = "HAL"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# [CORRECTION USART] (Don't hesitate to remove this part)
# Even if you are not using the external HAL that are in the Cargo.toml file, I recommand you remove them from your dependencies, it could generate errors.
[dependencies]
# Dépendances communes
embedded-hal = "0.2.7"

# Dépendances spécifiques aux architectures activées par les features
avr-hal = { version = "0.5.0", optional = true }  # Pour atmega328p
cortex-m = { version = "0.7.6", optional = true }  # Pour Cortex-M
cortex-m-rt = { version = "0.7.2", optional = true }  # Pour Cortex-M runtime
stm32f7xx-hal = { version = "0.13.0", optional = true }  # HAL STM32F7



# [CORRECTION USART] (Don't hesitate to remove this part)
# If you want to use conditionnal feature as stm32f746 or avr-hal, you should declare them as well as features (like ```stm32f746=[]```)
[features]
# Feature par défaut
default = ["stm32f746"]

# Feature pour l'architecture ATmega328P
atmega328p = ["avr-hal"]

# Feature pour l'architecture STM32 Cortex-M7
stm32f746 = ["cortex-m", "cortex-m-rt", "stm32f7xx-hal"]

# Feature SPI
spi = [
    "atmega328p_spi",
    "stm32f746_spi"
]

# SPI pour ATmega328P
atmega328p_spi = ["avr-hal"]

# SPI pour STM32F746, à faire lors de la compilation
stm32f746_spi = []
